--- a/src/theme/_smui-theme.scss
+++ b/src/theme/_smui-theme.scss
@@ -14,6 +14,8 @@
 @use '@material/typography/mdc-typography';
 @use '@material/typography/index' as typography;
 
+@use '@material/theme/styles';
+
 html,
 body {
 	background-color: theme.$surface;
