--- a/src/theme/dark/_smui-theme.scss
+++ b/src/theme/dark/_smui-theme.scss
@@ -4,22 +4,83 @@
 
 // Svelte Colors! (Dark Theme)
 @use '@material/theme/index' as theme with (
-  $primary: #ff3e00,
-  $secondary: color.scale(#676778, $whiteness: -10%),
-  $surface: color.adjust(color-palette.$grey-900, $blue: +4),
-  $background: #000,
-  $error: color-palette.$red-700
+	$primary: #c00000,
+	$secondary: #222222,
+	$surface: color.adjust(color-palette.$grey-900, $blue: +4),
+	$background: #000,
+	$error: color-palette.$red-700
 );
+
+@use '@material/typography/mdc-typography';
+@use '@material/typography/index' as typography;
+
+@use '@material/theme/styles';
 
 html,
 body {
-  background-color: #000;
-  color: theme.$on-surface;
+	background-color: #000;
+	color: theme.$on-surface;
+	padding: 0;
+	margin: 0;
 }
 
 a {
-  color: #40b3ff;
+	color: #c00000;
 }
 a:visited {
-  color: color.scale(#40b3ff, $lightness: -35%);
+	color: color.scale(#c00000, $lightness: -35%);
+}
+
+html {
+	@include typography.typography('body1');
+}
+
+h1 {
+	@include typography.typography('headline1');
+}
+
+h2 {
+	@include typography.typography('headline2');
+}
+
+h3 {
+	@include typography.typography('headline3');
+}
+
+h4 {
+	@include typography.typography('headline4');
+}
+
+h5 {
+	@include typography.typography('headline5');
+}
+
+h6 {
+	@include typography.typography('headline6');
+}
+
+caption {
+	@include typography.typography('caption');
+}
+
+code,
+pre {
+	font-family: 'Roboto Mono', monospace;
+}
+
+small {
+	font-size: 0.9em;
+}
+
+big {
+	font-size: 1.1em;
+}
+
+b,
+strong {
+	font-weight: bold;
+}
+
+main {
+	padding: 1em;
 }
